--- a/index.html
+++ b/index.html
@@ -21,18 +21,20 @@
       <img class="img-top-right" src="img/cloud.png" alt="cloud-image" />
       <h1>I'm Axel Azizi</h1>
       <h2>
-        <span class="under">Web</span> and <span class="under">Logo</span><br />
+        Web and Logo<br />
         Designer
       </h2>
       <img class="img-bottom-left" src="img/cloud.png" alt="cloud-image" />
-      <img class="mountain-img" src="img/mountain.png" alt="mountain-image" />
+      <!-- <img class="mountain-img" src="img/mountain.png" alt="mountain-image" /> -->
     </div>
+    <hr class="onehr" />
     <div class="middle-container">
       <div class="profile">
         <img src="img/axelazizi.png" alt="axelazizi-img" />
         <h2>Axel AZIZI.</h2>
         <p>
-          Je suis web devloppeur et specialiste en web design et en logo design depuis 2020 ,<br> diplomé de luniversite de Farhat abbas setif
+          Je suis web devloppeur et specialiste en web design et en logo design depuis 2020 , diplomé de
+          luniversite de Farhat abbas setif
         </p>
       </div>
       <hr />
@@ -58,12 +60,26 @@
             minimalist, moderne, chic ... j'ai debuté le design en 2019
           </p>
         </div>
+        <div class="skill-row">
+          <a class="mod3dlink" href="pages/modelisation3d.html" target="_blank">
+            <img class="mod3d" src="img/blender_3d.png" alt="Logo Modelisation 3D"
+          /></a>
+          <a class="mod3dlink" href="pages/modelisation3d.html" target="_blank"><h3>Modelisation 3D</h3></a>
+          <p class="webdev-p">
+            Je débute la modelisation 3d qui est un domaine passionant et pleins de richesses avec le professeur
+            Douar, j'utilise l'outils Blender 3D version 2.9 .<br />Pour voir mes creations Cliquez sur le titre ou
+            sur le logo.
+          </p>
+        </div>
       </div>
       <hr />
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>Si vous etes interesse par mes creations.</h3>
-        <p>envoyer moi un email pour en parler , il suffit juste de cliquer sur Contact me.<br> ne soit pas timide aller appuis tout de suite</p>
+        <p>
+          envoyer moi un email pour en parler , il suffit juste de cliquer sur Contact me.<br />
+          ne soit pas timide aller appuis tout de suite
+        </p>
         <a class="btn" href="mailto:axelazizi17@gmail.com">CONTACT ME</a>
       </div>
     </div>
