--- a/pages/modelisation3d.html
+++ b/pages/modelisation3d.html
@@ -23,9 +23,22 @@
     <div class="container-fluid">
       <h1 id="projettitre">Projets Blender Three.JS</h1>
       <div class="row">
-        <div class=" col-12 col-md-6 col-lg-4"><div class="prj col-12">Projet 1</div></div>
-        <div class=" col-12 col-md-6 col-lg-4"><div class="prj col-12">Projet 2</div></div>
-        <div class=" col-12 col-md-6 col-lg-4"><div class="prj col-12">Projet 3</div></div>
+        <div class="ged col-12 col-md-6 col-lg-4"><div class="prj col-12"><h3>TP Table et chaises</h3>
+        <a href="#"><img src="table_chaise.jpg" alt=""></a>
+        </div></div>
+        
+        <div class="ged col-12 col-md-6 col-lg-4">
+          <div class="prj col-12">
+            <h3>TP Final</h3>
+            <a href="bedroom.html"> <img src="img/bedroom.jpg" alt="" /></a>
+            <p>Les objects qui sont deplaçable sont :</p>
+            <p>Les livres ,les pots,le tapis,le coussin et le vase</p>
+            <p>pour naviger avec la camera veillez utiliser la molette et les touches suivante souris gauche, droite et molette</p>
+
+            </ul>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4"><div class="prj col-12">Projet 3</div></div>
       </div>
     </div>
 
