--- a/pages/modelisation3d.html
+++ b/pages/modelisation3d.html
@@ -24,8 +24,12 @@
       <h1 id="projettitre">Projets Blender Three.JS</h1>
       <div class="row">
         <div class="ged col-12 col-md-6 col-lg-4"><div class="prj col-12"><h3>TP Table et chaises</h3>
-        <a href="#"><img src="table_chaise.jpg" alt=""></a>
-        </div></div>
+        <a href="tablechaise.html"><img src="img/tablechaise.jpg" alt=""></a>
+        <p>Les objects qui sont deplaçable sont :</p>
+        <p>Les chaises et la table</p>
+        <p>pour naviger avec la camera veillez utiliser la molette et les touches suivante souris gauche, droite et molette</p>
+
+      </div></div>
         
         <div class="ged col-12 col-md-6 col-lg-4">
           <div class="prj col-12">
