--- a/pages/modelisation3d.html
+++ b/pages/modelisation3d.html
@@ -9,10 +9,9 @@
     <!--Permet de faire apparaitre licone dans le navigateur -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- importing font -->
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -23,7 +22,7 @@
     <div class="container-fluid">
       <h1 id="projettitre">Projets Blender Three.JS</h1>
       <div class="row">
-        <div class="ged col-12 col-md-6 col-lg-4"><div class="prj col-12"><h3>TP Table et chaises</h3>
+        <div class="ged col-12 col-md-6 col-lg-4"><div class="prj col-12"><h3 class="nomProjet">TP Table et chaises</h3>
         <a href="tablechaise.html"><img src="img/tablechaise.jpg" alt=""></a>
         <p>Les objects qui sont deplaçable sont :</p>
         <p>Les chaises et la table</p>
@@ -33,7 +32,7 @@
         
         <div class="ged col-12 col-md-6 col-lg-4">
           <div class="prj col-12">
-            <h3>TP Final</h3>
+            <h3 class="nomProjet">TP Final</h3>
             <a href="bedroom.html"> <img src="img/bedroom.jpg" alt="" /></a>
             <p>Les objects qui sont deplaçable sont :</p>
             <p>Les livres ,les pots,le tapis,le coussin et le vase</p>
@@ -42,7 +41,14 @@
             </ul>
           </div>
         </div>
-        <div class="col-12 col-md-6 col-lg-4"><div class="prj col-12">Projet 3</div></div>
+        <div class="ged col-12 col-md-6 col-lg-4"><div class="prj col-12">
+          <h3 class="nomProjet">Scène Crayon</h3>
+            <a href="crayon.html"> <img src="img/ProjetCrayon.jpg" alt="" /></a>
+            <p>Les objects qui sont deplaçable sont :</p>
+            <p> Tous les crayon </p>
+            <p>pour naviger avec la camera veillez utiliser la molette et les touches suivante souris gauche, droite et molette</p>
+
+        </div></div>
       </div>
     </div>
 
